--- a/index.html
+++ b/index.html
@@ -1,90 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
     <title>WebStudio</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="#">Studio</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contacts</a></li>
-            </ul>
-        </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+      <nav class="section-1">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-item">Studio</span></a
+        >
+        <ul class="section-one">
+          <li class="main-nav"><a href="./index.html">Studio</a></li>
+          <li class="main-nav"><a href="">Portfolio</a></li>
+          <li class="main-nav"><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <address class="nav-contacts">
+        <ul class="contacts-files">
+          <li class="contacts">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="contacts">
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
-        <section id="heroimage">
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
-        </section>
-        <section id="advantages">
-            <h2>advantages</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-                </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                </li>
-            </ul>
-        </section>
-        <section id="team">
-            <h2 class="team">Our Team</h2>
-            <ul>
-                <li>
-                    <img src="./images/mark.jpg" alt="Product Designer"
-                    width="264"
-                    height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/tom.jpg" alt="Frontend Developer"
-                    width="264"
-                    height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
-                    </li>
-                    <li>
-                        <img src="./images/camila.jpg" alt="Marketing"
-                        width="264"
-                        height="260">
-                        <h3>Camila Garcia</h3>
-                        <p>Marketing</p>
-                    </li>
-                    <li>
-                        <img src="./images/daniel.jpg" alt="UI Designer"
-                        width="264"
-                        height="260">
-                        <h3>Daniel Wilson</h3>
-                        <p>UI Designer</p>
-                    </li>
-                </ul>
-        </section>
+      <section class="main-section">
+        <h1 class="main-section-name">Effective Solutions for Your Business</h1>
+        <button type="button" name="Order Service" class="button">
+          Order Service
+        </button>
+      </section>
+      <section class="advantages">
+        <h2>advantages</h2>
+        <ul class="advantages-list">
+          <li class="advantages-items">
+            <h3 class="advantages-head">Strategy</h3>
+            <p class="advantages-text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li class="advantages-items">
+            <h3 class="advantages-head">Punctuality</h3>
+            <p class="advantages-text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li class="advantages-items">
+            <h3 class="advantages-head">Diligence</h3>
+            <p class="advantages-text">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li class="advantages-items">
+            <h3 class="advantages-head">Technologies</h3>
+            <p class="advantages-text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="team">
+        <h2 class="team-head">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-items">
+            <img
+              src="./images/mark.jpg"
+              alt="Product Designer"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-position">Product Designer</p>
+          </li>
+          <li class="team-items">
+            <img
+              src="./images/tom.jpg"
+              alt="Frontend Developer"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="team-position">Frontend Developer</p>
+          </li>
+          <li class="team-items">
+            <img
+              src="./images/camila.jpg"
+              alt="Marketing"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="team-position">Marketing</p>
+          </li>
+          <li class="team-items">
+            <img
+              src="./images/daniel.jpg"
+              alt="UI Designer"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="team-position">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section class="Portfolio">
+        <h2 class="portfolio-head">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio/img-6.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+              class="portfolio-image"
+            />
+            <h3 class="portfolio-name">Banking App</h3>
+            <p class="portfolio-position">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio/img-4.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+              class="portfolio-image"
+            />
+            <h3 class="portfolio-name">Cashless Payment</h3>
+            <p class="portfolio-position">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio/img-3.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+              class="portfolio-image"
+            />
+            <h3 class="portfolio-name">Meditation App</h3>
+            <p class="portfolio-position">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio/img-2.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+              class="portfolio-image"
+            />
+            <h3 class="portfolio-name">Taxi Service</h3>
+            <p class="portfolio-position">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio/img-1.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+              class="portfolio-image"
+            />
+            <h3 class="portfolio-name">Screen Illustrations</h3>
+            <p class="portfolio-position">Design</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              src="./images/portfolio/img-5.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+              class="portfolio-image"
+            />
+            <h3 class="portfolio-name">Online Courses</h3>
+            <p class="portfolio-position">Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+      <a href="./index.html" class="logo-one"
+        >Web<span class="logo-item-one">Studio</span></a
+      >
+      <p class="last-name">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
-</body>
+  </body>
 </html>
