--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <nav class="section-1">
         <a href="./index.html" class="logo"
-          >Web<span class="logo-item">Studio</span></a
+          >Web<span class="logo-two">Studio</span></a
         >
         <ul class="section-one">
           <li class="main-nav"><a href="./index.html">Studio</a></li>
