--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <header>
       <nav class="section-1">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-two">Studio</span></a
+        <a href="./index.html" class="logo-two"
+          >Web<span class="logo-item">Studio</span></a
         >
         <ul class="section-one">
           <li class="main-nav"><a href="./index.html">Studio</a></li>
