--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
               alt="Product Designer"
               width="264"
               height="260"
+              class="team-images"
             />
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-position">Product Designer</p>
@@ -98,6 +99,7 @@
               alt="Frontend Developer"
               width="264"
               height="260"
+              class="team-images"
             />
             <h3 class="team-name">Tom Ford</h3>
             <p class="team-position">Frontend Developer</p>
@@ -108,6 +110,7 @@
               alt="Marketing"
               width="264"
               height="260"
+              class="team-images"
             />
             <h3 class="team-name">Camila Garcia</h3>
             <p class="team-position">Marketing</p>
@@ -118,6 +121,7 @@
               alt="UI Designer"
               width="264"
               height="260"
+              class="team-images"
             />
             <h3 class="team-name">Daniel Wilson</h3>
             <p class="team-position">UI Designer</p>
