--- a/index.html
+++ b/index.html
@@ -82,53 +82,53 @@
       <section class="team">
         <h2 class="team-head">Our Team</h2>
         <ul class="team-list">
-          <li class="team-items">
+          <li class="team-item">
             <img
               src="./images/mark.jpg"
               alt="Product Designer"
               width="264"
               height="260"
-              class="team-images"
+              class="team-image"
             />
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-position">Product Designer</p>
           </li>
-          <li class="team-items">
+          <li class="team-item">
             <img
               src="./images/tom.jpg"
               alt="Frontend Developer"
               width="264"
               height="260"
-              class="team-images"
+              class="team-image"
             />
             <h3 class="team-name">Tom Ford</h3>
             <p class="team-position">Frontend Developer</p>
           </li>
-          <li class="team-items">
+          <li class="team-item">
             <img
               src="./images/camila.jpg"
               alt="Marketing"
               width="264"
               height="260"
-              class="team-images"
+              class="team-image"
             />
             <h3 class="team-name">Camila Garcia</h3>
             <p class="team-position">Marketing</p>
           </li>
-          <li class="team-items">
+          <li class="team-item">
             <img
               src="./images/daniel.jpg"
               alt="UI Designer"
               width="264"
               height="260"
-              class="team-images"
+              class="team-image"
             />
             <h3 class="team-name">Daniel Wilson</h3>
             <p class="team-position">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section class="Portfolio">
+      <section class="portfolio">
         <h2 class="portfolio-head">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
