--- a/index.html
+++ b/index.html
@@ -23,18 +23,24 @@
           >Web<span class="logo-item">Studio</span></a
         >
         <ul class="section-one">
-          <li class="main-nav"><a href="./index.html">Studio</a></li>
-          <li class="main-nav"><a href="">Portfolio</a></li>
-          <li class="main-nav"><a href="">Contacts</a></li>
+          <li class="main-nav">
+            <a href="./index.html" class="main-page">Studio</a>
+          </li>
+          <li class="main-nav"><a href="" class="main-page">Portfolio</a></li>
+          <li class="main-nav"><a href="" class="main-page">Contacts</a></li>
         </ul>
       </nav>
       <address class="nav-contacts">
         <ul class="contacts-files">
           <li class="contacts">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="mail-send"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="contacts">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="mail-send"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
